istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-grafana-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: grafana
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-prometheus-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 9090
      name: prometheus
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - monitoring-grafana-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-operator-grafana.monitoring.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-prometheus
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - monitoring-prometheus-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-operator-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
